Handled spacing Issues

--- a/src/App.css
+++ b/src/App.css
@@ -1531,7 +1531,9 @@ body{
     transform: scale(1);
   }
 }
-
-.additem-btn{
-  
+.updateprices-item-label{
+  width: 200px;
+  word-break: break-all;
+  word-wrap: break-word;
 }
+
